--- a/src/components/main.css
+++ b/src/components/main.css
@@ -1,11 +1,11 @@
-:root {/* CSS HEX */
---prussian-blue: #172a3aff;
---warm-black: #004346ff;
---carolina-blue: #00a6edff;
---mountain-meadow: #09bc8aff;
---white: #fcfcfcff;
+:root {
+  /* CSS HEX */
+  --prussian-blue: #172a3aff;
+  --warm-black: #004346ff;
+  --carolina-blue: #00a6edff;
+  --mountain-meadow: #09bc8aff;
+  --white: #fcfcfcff;
 }
-
 
 .flow > * + * {
   margin-top: var(--flow-space, 1em);
@@ -27,7 +27,8 @@
 }
 
 .card {
-  border: 1px solid #ccc;
+  box-shadow: 0px 0px 5px #757373;
+  /*border: 1px solid #ccc;*/
   border-radius: 5px;
   min-height: 10rem;
   max-width: 70%;
@@ -61,14 +62,13 @@
   flex: 1;
 }
 
-
 .down {
   color: red;
 }
 
-.page__wrapper  {
-      display: flex;
-      justify-content: center;
+.page__wrapper {
+  display: flex;
+  justify-content: center;
 }
 
 .page__wrapper > * {
@@ -80,35 +80,34 @@
 /*}*/
 
 .lds-ripple {
-    display: inline-block;
-      position: relative;
-        width: 80px;
-          height: 80px;
-        }
-        .lds-ripple div {
-            position: absolute;
-              border: 4px solid #111;
-                opacity: 1;
-                  border-radius: 50%;
-                    animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
-                  }
-                  .lds-ripple div:nth-child(2) {
-                      animation-delay: -0.5s;
-                    }
-                    @keyframes lds-ripple {
-                        0% {
-                              top: 36px;
-                                  left: 36px;
-                                      width: 0;
-                                          height: 0;
-                                              opacity: 1;
-                                                }
-                                                  100% {
-                                                        top: 0px;
-                                                            left: 0px;
-                                                                width: 72px;
-                                                                    height: 72px;
-                                                                        opacity: 0;
-                                                                          }
-                                                                        }
-
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-ripple div {
+  position: absolute;
+  border: 4px solid #111;
+  opacity: 1;
+  border-radius: 50%;
+  animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+.lds-ripple div:nth-child(2) {
+  animation-delay: -0.5s;
+}
+@keyframes lds-ripple {
+  0% {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
+    opacity: 1;
+  }
+  100% {
+    top: 0px;
+    left: 0px;
+    width: 72px;
+    height: 72px;
+    opacity: 0;
+  }
+}
