header, styling, improvements

--- a/src/components/base.css
+++ b/src/components/base.css
@@ -1,9 +1,10 @@
 html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-  font: 112.5%/1.45em georgia, serif, sans-serif;
+  font: 10px georgia, serif, sans-serif;
   box-sizing: border-box;
   overflow-y: scroll;
+  font-size: 20px;
 }
 body {
   margin: 0;
