--- a/src/components/main.css
+++ b/src/components/main.css
@@ -28,6 +28,13 @@
   overflow: hidden;
 }
 
+@media (min-width: 30em) {
+  .wrapper__desktop {
+    padding: 1rem;
+    overflow: hidden;
+  }
+}
+
 .card {
   box-shadow: 0px 0px 5px #757373;
   /*border: 1px solid #ccc;*/
