--- a/src/components/main.css
+++ b/src/components/main.css
@@ -5,6 +5,8 @@
   --carolina-blue: #00a6edff;
   --mountain-meadow: #09bc8aff;
   --white: #fcfcfcff;
+  --green: #11FF00;
+  --grey: #757373;
 }
 
 .flow > * + * {
@@ -104,39 +106,19 @@
   margin: 0;
 }
 
-/*.price__left {*/
+.card__box_animation {
+  animation-duration: 1s;
+  animation-name: slow-blink;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
 
-/*}*/
-
-.lds-ripple {
-  display: inline-block;
-  position: relative;
-  width: 80px;
-  height: 80px;
-}
-.lds-ripple div {
-  position: absolute;
-  border: 4px solid #111;
-  opacity: 1;
-  border-radius: 50%;
-  animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
-}
-.lds-ripple div:nth-child(2) {
-  animation-delay: -0.5s;
-}
-@keyframes lds-ripple {
-  0% {
-    top: 36px;
-    left: 36px;
-    width: 0;
-    height: 0;
-    opacity: 1;
+@keyframes slow-blink {
+  from {
+  box-shadow: 0px 0px 5px var(--grey);
   }
-  100% {
-    top: 0px;
-    left: 0px;
-    width: 72px;
-    height: 72px;
-    opacity: 0;
+
+  to {
+  box-shadow: 0px 0px 15px var(--grey);
   }
 }
