--- a/src/components/main.css
+++ b/src/components/main.css
@@ -5,7 +5,7 @@
   --carolina-blue: #00a6edff;
   --mountain-meadow: #09bc8aff;
   --white: #fcfcfcff;
-  --green: #11FF00;
+  --green: #11ff00;
   --grey: #757373;
 }
 
@@ -115,10 +115,10 @@
 
 @keyframes slow-blink {
   from {
-  box-shadow: 0px 0px 5px var(--grey);
+    box-shadow: 0px 0px 5px var(--grey);
   }
 
   to {
-  box-shadow: 0px 0px 15px var(--grey);
+    box-shadow: 0px 0px 15px var(--grey);
   }
 }
